samples/_failures_safe/1761304722_3efa6b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_03069940.c: In function ‘display_statistics’:
./samples/SAFE/__tmp_03069940.c:142:5: error: expected expression at end of input
  142 |     if (analyzer == NULL)
      |     ^~
./samples/SAFE/__tmp_03069940.c:142:5: error: expected declaration or statement at end of input
